[build-system]
requires = [
  "setuptools>=69.5.1",
  "wheel",
  "gitpython",
  "setuptools-git-versioning",
]
build-backend = "setuptools.build_meta"

[project]
name = "TCutility"

# Original authors
authors = [{ name = "TheoCheM group" }]
dependencies = [
  "lxml==5.2.0",
  "gitpython",
  "numpy>=1.20.0",
  "matplotlib>=3.4.0",
  "attrs>=21.2.0",
  "docx>=0.2.4",
  "htmldocx>=0.0.6",
  "plams",
  "scipy>=1.8",
  "dictfunc",
  "listfunc",
  "pytest>=7.4.4",
  "openpyxl>=3.1.2",
  "pandas>=1.3.0",
  "platformdirs",
  "requests",
  "listfunc",
  "strenum>=0.4",
  "click>=8.1",
  "opencv-python",
  "paramiko", 
]
# Current maintainers
maintainers = [{ name = "TheoCheM group" }]
license = { text = "MIT" }
description = "Utility package for working with AMS/ADF within the Theoretical Chemistry group at the Vrije Universiteit Amsterdam (TheoCheM). Makes use of plams - a package developed by SCM"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}"
dirty_template = "{tag}"

[tool.setuptools.packages.find]
where = ["src"] # list of folders that contain the packages (["."] by default)
include = [
  "tcutility*",
] # package names should match these glob patterns (["*"] by default)
exclude = [
  "tests*",
  "docs*",
] # exclude packages matching these glob patterns (empty by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[project.scripts]
tcutility = "tcutility.cli_scripts.tcparser:tcutility"

[project.optional-dependencies]
docs = [
  "sphinx>=8.1.3",
  "sphinx-autodoc-typehints>=3.0.1",
  "sphinx-click>=6.0.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-tabs>=3.4.7",
  "sphinxcontrib-applehelp>=2.0.0",
  "sphinxcontrib-devhelp>=2.0.0",
  "sphinxcontrib-htmlhelp>=2.1.0",
  "sphinxcontrib-jsmath>=1.0.1",
  "sphinxcontrib-qthelp>=2.0.0",
  "sphinxcontrib-serializinghtml>=2.0.0",
  "pydata-sphinx-theme>=0.16.1",
]
