[build-system]
requires = [
  "setuptools>=69.5.1",
  "wheel",
  "gitpython",
  "setuptools-git-versioning",
]
build-backend = "setuptools.build_meta"

[project]
name = "TCutility"

# Original authors
authors = [{ name = "TheoCheM group" }]
dependencies = [
  "click>=8.1",
  "dictfunc>=0.1.0",
  "listfunc>=0.1.0",
  "numpy>=1.20.0",
  "platformdirs>=2.0.0",
  "plams>=2025.104",
  "strenum>=0.4",
]
# Current maintainers
maintainers = [{ name = "TheoCheM group" }]
license = { text = "MIT" }
description = "Utility package for working with AMS/ADF within the Theoretical Chemistry group at the Vrije Universiteit Amsterdam (TheoCheM). Makes use of plams - a package developed by SCM"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}"
dirty_template = "{tag}"

[tool.setuptools.packages.find]
where = ["src"] # list of folders that contain the packages (["."] by default)
include = [
  "tcutility*",
] # package names should match these glob patterns (["*"] by default)
exclude = [
  "tests*",
  "docs*",
] # exclude packages matching these glob patterns (empty by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[project.scripts]
tcutility = "tcutility.cli_scripts.tcparser:tcutility"

[project.optional-dependencies]
dev = [
  "ruff>=0.0.250",
  "pytest-cov>=4.1.0",
  "pytest>=7.4.4",
  "sphinx==7.1.0",                               # 7.2.6 is the last to support Python 3.8
  "sphinx-autodoc-typehints>=1.22,<2.0.0",       # 1.22 is last to support 3.8
  "sphinx-click>=4.4.0,<5.0.0",                  # 4.4.0 supports 3.8
  "sphinx-copybutton>=0.5.2,<0.6.0",             # 0.5.2 supports 3.8
  "sphinx-tabs>=3.4.7,<3.5.0",                   # 3.4.7 supports 3.8
  "sphinxcontrib-applehelp>=1.0.4,<2.0.0",       # 1.0.4+ supports 3.8
  "sphinxcontrib-devhelp>=1.0.2,<2.0.0",         # 1.0.2+ supports 3.8
  "sphinxcontrib-htmlhelp>=2.0.0,<2.1.0",        # 2.0.0 supports 3.8
  "sphinxcontrib-jsmath>=1.0.1,<2.0.0",          # 1.0.1 supports 3.8
  "sphinxcontrib-qthelp>=1.0.3,<2.0.0",          # 1.0.3+ supports 3.8
  "sphinxcontrib-serializinghtml>=1.1.5,<2.0.0", # 1.1.5+ supports 3.8
  "pydata-sphinx-theme>=0.13.3,<0.14.0",         # 0.13.3 supports 3.8
]

plot = ["matplotlib>=3.4.0"]
analysis = ["scipy>=1.8.0"]
vdd = ["attrs>=21.2.0", "pandas>=1.3.0", "openpyxl>=3.0.0"]
report = [
  "docx>=0.2.4",
  "htmldocx>=0.0.6",
  "requests>=2.25.0",
  "opencv-python>=4.11.0.86",
]
connect = ["paramiko>=2.7.0"]
# adf = ["pyfmo"]
cite = ["requests>=2.25.0"]
