[build-system]
requires = [
  "setuptools>=69.5.1",
  "wheel",
  "gitpython",
  "setuptools-git-versioning",
]
build-backend = "setuptools.build_meta"

[project]
name = "TCutility"

# Original authors
authors = [{ name = "TheoCheM group" }]
dependencies = [
  "click>=8.1.8",
  "dictfunc>=1.1.0",
  "listfunc>=1.0.0",
  "numpy>=1.24.4",
  "plams>=2025.104",
  "platformdirs>=4.3.6",
  "requests>=2.32.4",
  "strenum>=0.4.15",
  "jsonpickle==3.1.0",
]
# Current maintainers
maintainers = [{ name = "TheoCheM group" }]
license = { text = "MIT" }
description = "Utility package for working with AMS/ADF within the Theoretical Chemistry group at the Vrije Universiteit Amsterdam (TheoCheM). Makes use of plams - a package developed by SCM"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

[tool.setuptools-git-versioning]
enabled = true
template = "{tag}"
dev_template = "{tag}"
dirty_template = "{tag}"

[tool.setuptools.packages.find]
where = ["src"] # list of folders that contain the packages (["."] by default)
include = [
  "tcutility*",
] # package names should match these glob patterns (["*"] by default)
exclude = [
  "tests*",
  "docs*",
] # exclude packages matching these glob patterns (empty by default)
namespaces = false # to disable scanning PEP 420 namespaces (true by default)

[dependency-groups]
dev = []

[project.scripts]
tcutility = "tcutility.cli_scripts.tcparser:tcutility"

# TODO: this block should not be optional anymore once we drop Python 3.8 support. Ideally, we want to use uv for all CLI tools which makes installing development dependencies extremely streamlined.
# The reason why we cannot do this yet is because the new pip 25.1 update (April 2025) is only available for python 3.9 and up. This means that users with Python 3.8 will not be able to install the dev dependencies because uv requires pip 25.1+.
# See https://ichard26.github.io/blog/2025/04/whats-new-in-pip-25.1/ and https://packaging.python.org/en/latest/specifications/dependency-groups/
[project.optional-dependencies]
dev = [
  "gitpython>=3.1.45",
  "pydata-sphinx-theme>=0.14.4",
  "pytest>=8.3.5",
  "pytest-cov>=5.0.0",
  "ruff>=0.12.12",
  "sphinx>=7.1.2, <9.0.0",
  "sphinx-autodoc-typehints>=2.0.1",
  "sphinx-click>=6.0.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-tabs>=3.4.7",
  "sphinxcontrib-applehelp>=1.0.4",
  "sphinxcontrib-devhelp>=1.0.2",
  "sphinxcontrib-htmlhelp>=2.0.1",
  "sphinxcontrib-jsmath>=1.0.1",
  "sphinxcontrib-qthelp>=1.0.3",
  "sphinxcontrib-serializinghtml>=1.1.5",
]

plot = ["matplotlib>=3.7.5"]
analysis = ["scipy>=1.10.1"]
vdd = ["openpyxl>=3.1.5", "pandas>=2.0.3"]
report = ["docx>=0.2.4", "htmldocx>=0.0.6", "opencv-python>=4.11.0.86"]
connect = ["paramiko>=3.5.1"]

# adf = ["pyfmo"]
